<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="30dp">
<LinearLayout
    android:layout_width="230dp"
    android:layout_height="230dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/main_act_bg"
    android:orientation="vertical">
    
</LinearLayout>
	<TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="250dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"        
        android:text="@string/hello_text"
        android:textSize="18sp" />

			<TextView
   				android:paddingTop="370dp"
   				android:paddingLeft="10dp"  				        
   			 	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:drawableLeft="@drawable/ic_action_edit"
   				android:gravity="left"
   				android:text="@string/edit_desc"
   				android:textSize="30px" />
			<TextView
   				android:paddingTop="420dp"
   				android:paddingLeft="10dp"         
   			 	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:drawableLeft="@drawable/ic_action_view_as_list"
   				android:gravity="left"
   				android:text="@string/list_desc"
   				android:textSize="30px" />
			<TextView
   				android:paddingTop="470dp"
   				android:paddingLeft="10dp"         
   			 	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:drawableLeft="@drawable/ic_action_settings"
   				android:gravity="left"
   				android:text="@string/settings_desc"
   				android:textSize="30px" />

            
</RelativeLayout>
