<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WizardFragments.WizardUserDataFragment" >
  <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/udTableLayout">
      <TableRow android:layout_width="match_parent">
          <TextView android:text="@string/ud_new_defaults" android:layout_width="match_parent" />
      </TableRow>  
      		<TableRow android:layout_width="wrap_content"  android:paddingTop="20dp"
            android:layout_height="wrap_content">
            <ListView android:id="@+id/messagesListView" 
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:visibility="gone"
                android:divider="@null"
android:dividerHeight="0dp"
android:focusable="false"
android:focusableInTouchMode="false"
android:clickable="false"/>
            </TableRow>
      
        <TableRow android:layout_width="wrap_content"  android:paddingTop="20dp"
            android:layout_height="wrap_content">
               <TextView
                android:id="@+id/name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signame_s"
                android:layout_weight="0.5"/>
               <EditText
                android:id="@+id/name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

            </EditText>
        </TableRow>
          <TableRow android:layout_width="wrap_content" android:paddingTop="20dp"
            android:layout_height="wrap_content">
               <TextView
                android:id="@+id/reason_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigreason_s"
                android:layout_weight="0.5"
               />
               <EditText
                android:id="@+id/reason_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
      </TableRow>
       <TableRow android:layout_width="wrap_content" android:paddingTop="20dp"
            android:layout_height="wrap_content">
               <TextView
                android:id="@+id/location_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigloc_s"
                android:layout_weight="0.5"
                 />
               <EditText
                android:id="@+id/location_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
      </TableRow>
       <TableRow android:layout_width="wrap_content" android:paddingTop="20dp" android:paddingBottom="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/picture_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ud_select_image"
                android:layout_weight="0.5"
                 /> 
            <Button
                 android:text="@string/ud_select_image"
                  android:layout_span="1"
                  android:id="@+id/selectPicture_button"></Button>  
      </TableRow>
      </TableLayout>

</LinearLayout>
