<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/udTableLayout">  
      		<TableRow android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
            <ListView android:id="@+id/messagesListView" 
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:visibility="gone"
                android:divider="@null"
android:dividerHeight="0dp"
android:focusable="false"
android:focusableInTouchMode="false"
android:clickable="false"/>
            </TableRow>
      
        <TableRow android:layout_width="wrap_content"  android:paddingTop="20dp"
            android:layout_height="wrap_content">
               <TextView
                android:id="@+id/name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signame_s"
                android:layout_weight="0.5"/>
               <EditText
                android:id="@+id/editingname_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

            </EditText>
        </TableRow>
          <TableRow android:layout_width="wrap_content" android:paddingTop="20dp"
            android:layout_height="wrap_content">
               <TextView
                android:id="@+id/reason_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigreason_s"
                android:layout_weight="0.5"
               />
               <EditText
                android:id="@+id/editingreason_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
      </TableRow>
       <TableRow android:layout_width="wrap_content" android:paddingTop="20dp"
            android:layout_height="wrap_content">
               <TextView
                android:id="@+id/location_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigloc_s"
                android:layout_weight="0.5"
                 />
               <EditText
                android:id="@+id/editinglocation_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
      </TableRow>
    </TableLayout>

</LinearLayout>
